--- a/index.html
+++ b/index.html
@@ -53,8 +53,16 @@ layout: none
         a:hover {
             background-color: rgba(45, 59, 186, 0.3);
         }
-        #content h1 {
+        h1, h2 {
             color: #fff;
+            margin: 0.1em 0;
+        }
+        h2 {
+            font-size: 1.1em;
+            font-weight: normal;
+        }
+        h2 a {
+            padding: 3px 0;
         }
         #background-video-source {
             position: absolute;
@@ -70,6 +78,7 @@ layout: none
         <label id="background-video-source" href="#"></label>
         <div id="content">
             <h1>Jean-Marc Skopek</h1>
+            <h2>Software developer <a href="https://www.sokanu.com">@sokanu</a>. I like it when art and technology collide.</h2>
             <ul id="menu">
                 <li><a href="https://skopek-blog.tumblr.com"><i class="fa fa-tumblr" aria-hidden="true"></i> Tumblr</a></li>
                 <li><a href="https://www.twitter.com/jmskopek"><i class="fa fa-twitter" aria-hidden="true"></i> Twitter</a></li>
