--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@ layout: none
             margin: 5px 0;
         }
         #menu li a i {
-            width: 20px;
+            width: 16px;
+            margin-right: 5px;
+            text-align: right;
         }
         label, a {
             color: #fff;
@@ -84,6 +86,7 @@ layout: none
                 <li><a href="https://www.twitter.com/jmskopek"><i class="fa fa-twitter" aria-hidden="true"></i> Twitter</a></li>
                 <li><a href="https://www.instagram.com/jskopek/"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a></li>
                 <li><a href="https://github.com/jskopek"><i class="fa fa-github" aria-hidden="true"></i> Github</a></li>
+                <li><a href="mailto:jeanmarc@skopek.ca?subject=Hello"><i class="fa fa-envelope" aria-hidden="true"></i> Email</a></li>
             </ul>
         </div>
 
