--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ layout: none
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Jean-Marc Skopek</title>
         <style type="text/css">
         html, body { height: 100%; }
@@ -72,6 +73,17 @@ layout: none
             bottom: 50px;
             color: #fff;
             text-decoration: none;
+        }
+        @media(max-width:500px) {
+            #background-video {
+               border: 7px solid #fff;
+            }
+            #background-video-source {
+                display: none;
+            }
+            h2 {
+                width: 80%;
+            }
         }
         </style>
     </head>
