--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: none
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
     </head>
     <body>
-        <video id="background-video" autoplay loop  style="background-image:inherit;" src="#"></video>
+        <video playsinline id="background-video" autoplay loop  style="background-image:inherit;" src="#"></video>
         <label id="background-video-source" href="#"></label>
         <div id="content">
             <h1>Jean-Marc Skopek</h1>
