--- a/index.html
+++ b/index.html
@@ -2,19 +2,18 @@
 layout: default
 ---
 
-<link rel="stylesheet" href="{{ "/css/front-page.css" | prepend: site.baseurl }}">
-
-<div id="homepage-text">
+<div id="homepage-content">
     <p>Hi! I'm Jean-Marc</p>
     <p>I’m a software developer in Vancouver. I build clean, <a href="#">deceptively powerful web applications</a> for my clients.</p>
-    <p>I like <a href="https://vimeo.com/album/5136866">timelapses</a> and <a href="https://vimeo.com/album/5134437">drones</a> and <a href="https://www.flickr.com/photos/23630844@N02/">photography</a>. I occasionally <a href="/posts/">write</a>.</a>
+    <p>I like <a href="/timelapses">timelapses</a> and <a href="https://vimeo.com/album/5134437">drones</a> and <a href="https://www.flickr.com/photos/23630844@N02/">photography</a>. I occasionally <a href="/posts/">write</a>.</a>
+
+    <ul id="menu">
+        <li><a href="https://skopek-blog.tumblr.com"><i class="fa fa-tumblr" aria-hidden="true"></i> Tumblr</a></li>
+        <li><a href="https://www.twitter.com/jmskopek"><i class="fa fa-twitter" aria-hidden="true"></i> Twitter</a></li>
+        <li><a href="https://www.instagram.com/jskopek/"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a></li>
+        <li><a href="https://github.com/jskopek"><i class="fa fa-github" aria-hidden="true"></i> Github</a></li>
+        <li><a href="mailto:jeanmarc@skopek.ca?subject=Hello"><i class="fa fa-envelope" aria-hidden="true"></i> Email</a></li>
+    </ul>
 </div>
-<ul id="menu">
-    <li><a href="https://skopek-blog.tumblr.com"><i class="fa fa-tumblr" aria-hidden="true"></i> Tumblr</a></li>
-    <li><a href="https://www.twitter.com/jmskopek"><i class="fa fa-twitter" aria-hidden="true"></i> Twitter</a></li>
-    <li><a href="https://www.instagram.com/jskopek/"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a></li>
-    <li><a href="https://github.com/jskopek"><i class="fa fa-github" aria-hidden="true"></i> Github</a></li>
-    <li><a href="mailto:jeanmarc@skopek.ca?subject=Hello"><i class="fa fa-envelope" aria-hidden="true"></i> Email</a></li>
-</ul>
 
 <script type="text/javascript" src="{{ "/assets/front-page.js" | prepend: site.baseurl }}"></script>
