--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@ layout: default
 
 <div id="homepage-content">
     <p>Hi! I'm Jean-Marc</p>
-    <p>I’m a software developer in Vancouver. I build clean, <a href="#">deceptively powerful web applications</a> for my clients.</p>
-    <p>I like <a href="/timelapses">timelapses</a> and <a href="https://vimeo.com/album/5134437">drones</a> and <a href="https://www.flickr.com/photos/23630844@N02/">photography</a>. I occasionally <a href="/posts/">write</a>.</a>
+    <p>I’m a software developer in Vancouver.</p>
+    {% comment %}<p>I build clean, <a href="#">deceptively powerful web applications</a> for my clients.</p>{% endcomment %}
+    <p>I like <a href="/timelapses">timelapses</a> and <a href="/drones">drones</a> and <a href="https://www.flickr.com/photos/23630844@N02/">photography</a>. I occasionally <a href="/posts/">write</a>.</a>
 
     <ul id="menu">
         <li><a href="https://skopek-blog.tumblr.com"><i class="fa fa-tumblr" aria-hidden="true"></i> Tumblr</a></li>
