Tweaks to timelapses layout

--- a/timelapses.html
+++ b/timelapses.html
@@ -1,10 +1,8 @@
 ---
-layout: default
+layout: timelapses
 title: Timelapses
 permalink: /timelapses/
 ---
-
-<p><a href="/">home</a></p>
 
 {% assign europe = site.timelapses | where: "categories", "europe" %}
 {% assign canada = site.timelapses | where: "categories", "canada" %}
