Adding icons to homepage

--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@ layout: default
     <p>Hi! I'm Jean-Marc</p>
     <p>I’m a software developer in Vancouver.</p>
     {% comment %}<p>I build clean, <a href="#">deceptively powerful web applications</a> for my clients.</p>{% endcomment %}
-    <p>I like <a href="/timelapses">timelapses</a> and <a href="/drones">drones</a> and <a href="https://www.flickr.com/photos/23630844@N02/">photography</a>. I occasionally <a href="/posts/">write</a>.</a>
+
+    <p>
+        I like 
+        <a href="/timelapses"><i class="fa fa-timelapses"></i> <span>timelapses</span></a> and 
+        <a href="/drones"><i class="fa fa-drone"></i> <span>drones</span></a> and 
+        <a href="https://www.flickr.com/photos/23630844@N02/"><i class="fa fa-lens"></i> <span>photography</span></a>. 
+        I occasionally 
+        <a href="/posts/"><i class="fa fa-writing"></i> <span>write</span></a>.
+    </p>
 
     <ul id="menu">
         <li><a href="https://skopek-blog.tumblr.com"><i class="fa fa-tumblr" aria-hidden="true"></i> Tumblr</a></li>
