--- a/drones.html
+++ b/drones.html
@@ -1,10 +1,8 @@
 ---
-layout: default
+layout: drones
 title: Drone Pans
 permalink: /drones/
 ---
-
-<p><a href="/">home</a></p>
 
 {% assign bc = site.dronepans | where: "categories", "bc" %}
 
