--- a/posts.html
+++ b/posts.html
@@ -1,9 +1,14 @@
 ---
-layout: default
+layout: post
 ---
 
-
-<h1>Posts</h1>
+<ul>
+    {% for post in site.posts %}
+    <li>
+        <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+    {% endfor %}
+</ul>
 
 <h2>Technology</h2>
 <ul>
