--- a/index.html
+++ b/index.html
@@ -12,12 +12,19 @@ layout: default
         <a href="/timelapses"><i class="fa fa-timelapses"></i> <span>timelapses</span></a> and 
         <a href="/drones"><i class="fa fa-drone"></i> <span>drones</span></a> and 
         <a href="https://www.flickr.com/photos/23630844@N02/"><i class="fa fa-lens"></i> <span>photography</span></a>. 
+        {% comment %}<a href="/photography/"><i class="fa fa-lens"></i> <span>photography</span></a>.{% endcomment %}
+
         I occasionally 
         <a href="/posts/"><i class="fa fa-writing"></i> <span>write</span></a>.
+
+        {% comment %}
+        I have some <a href="/projects"><i class="fa fa-writing"></i> <span>projects</span></a>.
+        Some info <a href="/about"><i class="fa fa-writing"></i> <span>about me</span></a>.
+        {% endcomment %}
+
     </p>
 
     <ul id="menu">
-        <li><a href="https://skopek-blog.tumblr.com"><i class="fa fa-tumblr" aria-hidden="true"></i> Tumblr</a></li>
         <li><a href="https://www.twitter.com/jmskopek"><i class="fa fa-twitter" aria-hidden="true"></i> Twitter</a></li>
         <li><a href="https://www.instagram.com/jskopek/"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a></li>
         <li><a href="https://github.com/jskopek"><i class="fa fa-github" aria-hidden="true"></i> Github</a></li>
