--- a/index.html
+++ b/index.html
@@ -2,34 +2,30 @@
 layout: default
 ---
 
-<div id="homepage-content">
-    <p>Hi! I'm Jean-Marc</p>
-    <p>I’m a software developer in Vancouver.</p>
-    {% comment %}<p>I build clean, <a href="#">deceptively powerful web applications</a> for my clients.</p>{% endcomment %}
 
-    <p>
-        I like 
-        <a href="/timelapses"><i class="fa fa-timelapses"></i> <span>timelapses</span></a> and 
-        <a href="/drones"><i class="fa fa-drone"></i> <span>drones</span></a> and 
-        <a href="https://www.flickr.com/photos/23630844@N02/"><i class="fa fa-lens"></i> <span>photography</span></a>. 
-        {% comment %}<a href="/photography/"><i class="fa fa-lens"></i> <span>photography</span></a>.{% endcomment %}
 
-        I occasionally 
-        <a href="/posts/"><i class="fa fa-writing"></i> <span>write</span></a>.
+<img src="/assets/profile-photo.jpg" alt="Profile Photo" class="profile-photo my-4"/>
 
-        {% comment %}
-        I have some <a href="/projects"><i class="fa fa-writing"></i> <span>projects</span></a>.
-        Some info <a href="/about"><i class="fa fa-writing"></i> <span>about me</span></a>.
-        {% endcomment %}
+<p>Hi! I'm Jean-Marc.</p>
 
-    </p>
+<p>I’m a software developer in Vancouver.</p>
+{% comment %}<p>I build clean, <a href="#">deceptively powerful web applications</a> for my clients.</p>{% endcomment %}
 
-    <ul id="menu">
-        <li><a href="https://www.twitter.com/jmskopek"><i class="fa fa-twitter" aria-hidden="true"></i> Twitter</a></li>
-        <li><a href="https://www.instagram.com/jskopek/"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a></li>
-        <li><a href="https://github.com/jskopek"><i class="fa fa-github" aria-hidden="true"></i> Github</a></li>
-        <li><a href="mailto:jeanmarc@skopek.ca?subject=Hello"><i class="fa fa-envelope" aria-hidden="true"></i> Email</a></li>
-    </ul>
-</div>
 
-<script type="text/javascript" src="{{ "/assets/front-page.js" | prepend: site.baseurl }}"></script>
+<p>
+    I like 
+    <a href="/timelapses"><i class="fa fa-timelapses"></i> <span>timelapses</span></a> and 
+    <a href="/drones"><i class="fa fa-drone"></i> <span>drones</span></a> and 
+    <a href="https://www.flickr.com/photos/23630844@N02/"><i class="fa fa-lens"></i> <span>photography</span></a>. 
+    {% comment %}<a href="/photography/"><i class="fa fa-lens"></i> <span>photography</span></a>.{% endcomment %}
+    I occasionally  <a href="/posts/"><i class="fa fa-writing"></i> <span>write</span></a>.
+</p>
+
+<p>I'm active on <a href="https://www.twitter.com/jmskopek"><i class="fa fa-twitter" aria-hidden="true"></i> Twitter</a>, <a href="https://www.instagram.com/jskopek/"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a>, and <a href="https://github.com/jskopek"><i class="fa fa-github" aria-hidden="true"></i> Github</a>. Want to say hi? Send me an <a href="mailto:jeanmarc@skopek.ca?subject=Hello"><i class="fa fa-envelope" aria-hidden="true"></i> Email</a>.</p>
+
+{% comment %}
+I have some <a href="/projects"><i class="fa fa-writing"></i> <span>projects</span></a>.
+Some info <a href="/about"><i class="fa fa-writing"></i> <span>about me</span></a>.
+{% endcomment %}
+
+
