--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@ layout: default
 <p>
     I like 
     <a href="/timelapses"><i class="fa fa-timelapses"></i> <span>timelapses</span></a> and 
-    <a href="/drones"><i class="fa fa-drone"></i> <span>drones</span></a> and 
-    <a href="https://www.flickr.com/photos/23630844@N02/"><i class="fa fa-lens"></i> <span>photography</span></a>. 
+    <a href="/drones"><i class="fa fa-drone"></i> <span>drones</span></a>.
+    {% comment %}<a href="https://www.flickr.com/photos/23630844@N02/"><i class="fa fa-lens"></i> <span>photography</span></a>.{% endcomment %}
     {% comment %}<a href="/photography/"><i class="fa fa-lens"></i> <span>photography</span></a>.{% endcomment %}
     I occasionally  <a href="/posts/"><i class="fa fa-writing"></i> <span>write</span></a>.
 </p>
