--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body_class: dark
         I occasionally  <a href="/posts/"><i class="fa fa-writing"></i> <span>write</span></a>.
     </p>
 
-    <p>I'm active on <a href="https://www.twitter.com/jmskopek"><i class="fa fa-twitter" aria-hidden="true"></i> Twitter</a>, <a href="https://www.instagram.com/jskopek/"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a>, and <a href="https://github.com/jskopek"><i class="fa fa-github" aria-hidden="true"></i> Github</a>. Want to say hi? Send me an <a href="mailto:jeanmarc@skopek.ca?subject=Hello"><i class="fa fa-envelope" aria-hidden="true"></i> Email</a>.</p>
+    <p>I'm active on <a href="https://www.twitter.com/jmskopek"><i class="fa fa-twitter" aria-hidden="true"></i> <span>Twitter</span></a>, <a href="https://www.instagram.com/jskopek/"><i class="fa fa-instagram" aria-hidden="true"></i> <span>Instagram</span></a>, and <a href="https://github.com/jskopek"><i class="fa fa-github" aria-hidden="true"></i> <span>Github</span></a>. Want to say hi? Send me an <a href="mailto:jeanmarc@skopek.ca?subject=Hello"><i class="fa fa-envelope" aria-hidden="true"></i> <span>Email</span></a>.</p>
 
     {% comment %}
     I have some <a href="/projects"><i class="fa fa-writing"></i> <span>projects</span></a>.
