--- a/timelapses.html
+++ b/timelapses.html
@@ -28,10 +28,12 @@ permalink: /timelapses/
 <div class="modal micromodal-slide" id="video-modal" aria-hidden="true">
 	<div class="modal__overlay" tabindex="-1" data-micromodal-close>
 		<div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="modal-1-title">
-            <video class="modal-video"></video>
+            <video class="modal-video" loop></video>
 			<p class="summary"></p>
+            <a href="#" class="btn-toggle-video-quality btn btn-sm btn-primary">small</a>
 		</div>
 	</div>
 </div>
+
 
 <script type="text/javascript" src="/assets/video-page.js"></script>
