--- a/drones.html
+++ b/drones.html
@@ -5,16 +5,19 @@ body_class: dark
 permalink: /drones/
 ---
 
-{% assign bc = site.dronepans | where: "categories", "bc" %}
-
 <div class="row">
-    {% for item in bc %}
-        <div class="col col-sm-4 mb-3 timelapse-item">
-            <a href="{{ item.url }}" class="btn-video-modal" data-url-large="{{ site.static_url }}drones/hd/{{ item.filename }}" data-url-medium="{{ site.static_url }}drones/medium/{{ item.filename }}" data-url-small="{{ site.static_url }}drones/sd/{{ item.filename }}" data-summary="{{ item.summary }}">
-                <img src="{{ site.static_url }}drones/thumbnails/{{ item.thumbnail }}"/>
+    {% for item in site.dronepans %}
+         <div class="col col-sm-6 mb-3 timelapse-item">
+            <a href="#" class="btn-video-modal" 
+               data-base-url="{{ site.static_url }}drones/"
+               data-url-large="{{ item.src_large }}"
+               data-url-small="{{ item.src_small }}"
+               data-url-thumbnail="{{ item.thumbnail }}"
+               data-summary="{{ item.summary }}">
+                <img src="{{ site.static_url }}drones/{{ item.thumbnail }}"/>
                 <div class="timelapse-summary">{{ item.title }}</div>
             </a>
-        </div>
+        </div>   
     {% endfor %}
 </div>
 
