Reorganizing personal site to new projects structure

--- a/_projects/drones.html
+++ b/_projects/drones.html
@@ -1,8 +1,9 @@
 ---
 layout: drones
-title: Drone Pans
+title:  "Drones"
 body_class: dark
-permalink: /drones/
+permalink: /projects/drones/
+thumbnail: drones/thumbnails/V1-0004_Sea To Sky River.jpg
 ---
 
 <div class="row">
