--- a/index.html
+++ b/index.html
@@ -10,16 +10,12 @@ body_class: dark
 <div class="home-text">
     <p>Hi! I'm Jean-Marc.</p>
 
-    <p>I’m a software developer in Vancouver.</p>
-    {% comment %}<p>I build clean, <a href="#">deceptively powerful web applications</a> for my clients.</p>{% endcomment %}
+    <p>I’m a freelance software developer in Vancouver. I build clean, <a href="https://empathy.consulting">deceptively powerful web applications</a> for my clients.</p>
 
 
     <p>
-        I like 
-        <a href="/timelapses"><i class="fa fa-timelapses"></i> <span>timelapses</span></a> and 
-        <a href="/drones"><i class="fa fa-drone"></i> <span>drones</span></a>.
+        In my spare time, I've got a number of pet <a href="/projects"><span>projects</span></a>.
         {% comment %}<a href="https://www.flickr.com/photos/23630844@N02/"><i class="fa fa-lens"></i> <span>photography</span></a>.{% endcomment %}
-        {% comment %}<a href="/photography/"><i class="fa fa-lens"></i> <span>photography</span></a>.{% endcomment %}
         I occasionally  <a href="/posts/"><i class="fa fa-writing"></i> <span>write</span></a>.
     </p>
 
