Plastic monument project is now in draft form

--- a/_projects/plastic-monument.html
+++ b/_projects/plastic-monument.html
@@ -3,7 +3,7 @@ layout: drones
 title:  "The Plastic Monument"
 permalink: /projects/plastic-monument/
 body_class: dark
-draft: false
+draft: true
 ---
 
 <h1>The Plastic Monument</h1>
