Tweaking design to be light accross the site

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@ body_class: dark
 
 
 
-<img src="/assets/home-back.jpg" alt="Homepage Photo" class="home-photo"/>
+<!-- <img src="/assets/home-back-white.jpg" alt="Homepage Photo" class="home-photo"/> -->
 
 <div class="home-text">
     <p>Hi! I'm Jean-Marc.</p>
 
-    <p>I’m a freelance software developer in Vancouver. I build clean, <a href="https://empathy.consulting">deceptively powerful web applications</a> for my clients.</p>
+    <p>I’m a freelance software developer in Vancouver. I build clean, <a href="https://empathy.consulting"><span>deceptively powerful web applications</span></a> for my clients.</p>
 
 
     <p>
