Tweaking wording on homepage

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ body_class: dark
 <div class="home-text">
     <p>Hi! I'm Jean-Marc.</p>
 
-    <p>I’m a freelance software developer in Vancouver. I build clean, <a href="https://empathy.consulting"><span>deceptively powerful web applications</span></a> for my clients.</p>
+    <p>I’m a freelance software developer in Vancouver. I build clean, <a href="https://empathy.consulting"><span>well planned</span></a> web applications for my clients.</p>
 
 
     <p>
