--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@ body_class: posts
 <div class="row">
     {% for post in site.projects %}
     {% unless post.draft %}
-    <div class="col">
+    <div class="col-12 col-md-6 mb-4">
         <a href="{{ post.url }}" class="d-block">
             {% if post.thumbnail %}
             <div class="thumbnail thumbnail-large mb-2">
