--- a/writing.html
+++ b/writing.html
@@ -33,7 +33,7 @@ body_class: posts
 <h4 class="mb-4">Recent Posts:</h4>
 <div>
     {% for post in site.posts %}
-    {% unless post.draft %}
+    {% unless post.hidden %}
     <a href="{{ post.url }}" class="d-block mb-4">
         <div class="row">
             <div class="col-12 col-md-3 mb-2">
