Adding support for dark mode

--- a/writing.html
+++ b/writing.html
@@ -4,7 +4,7 @@ permalink: /posts/
 body_class: posts
 ---
 
-<div class="row mb-4 pb-4 featured-posts">
+<div class="row mb-4 pb-4 hr">
     {% for post in site.posts %}
     {% if post.featured %}
     <div class="col-12 col-md-6 mb-4">
